--- a/Unit 3 Assignment Michael-Petrakis.project
+++ b/Unit 3 Assignment Michael-Petrakis.project
@@ -26,6 +26,22 @@
             "cityWhile",
             "cityWhile.json"
           ]
+        },
+        {
+          "!type": "External",
+          "file": [
+            "forms",
+            "dogStore",
+            "dogStore.json"
+          ]
+        },
+        {
+          "!type": "External",
+          "file": [
+            "forms",
+            "forReverseStates",
+            "forReverseStates.json"
+          ]
         }
       ],
       "configxml": null,
@@ -47,7 +63,7 @@
       "eslintRules": null,
       "expanded_pmp": null,
       "extraheaders": null,
-      "firstform": "cityWhile",
+      "firstform": "forReverseStates",
       "fontFamily": "system",
       "googlePlayKey": "certificates/google.json",
       "googlePlayTrack": "production",
