--- a/Unit 3 Assignment Michael-Petrakis.project
+++ b/Unit 3 Assignment Michael-Petrakis.project
@@ -26,7 +26,6 @@
             "cityWhile",
             "cityWhile.json"
           ]
-
         },
         {
           "!type": "External",
@@ -35,7 +34,22 @@
             "dogStore",
             "dogStore.json"
           ]
-
+        },
+        {
+          "!type": "External",
+          "file": [
+            "forms",
+            "forReverseStates",
+            "forReverseStates.json"
+          ]
+        },
+        {
+          "!type": "External",
+          "file": [
+            "forms",
+            "functionCompare",
+            "functionCompare.json"
+          ]
         }
       ],
       "configxml": null,
@@ -57,11 +71,7 @@
       "eslintRules": null,
       "expanded_pmp": null,
       "extraheaders": null,
-
-      "firstform": "dogStore",
-=======
-      "firstform": "cityWhile",
-
+      "firstform": "functionCompare",
       "fontFamily": "system",
       "googlePlayKey": "certificates/google.json",
       "googlePlayTrack": "production",
